# ml-training

./: Makefile  README.md  pyproject.toml
.github/workflows/: build-ci.yaml
docker/: Dockerfile
docs/: table_schema.md
ml_training/: config.py  data_pipeline.py  data_templates.py  main.py  model_saver.py  object_storage.py  train.py
tests/: test_data_pipeline.py
